--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
             <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
                 <div class="col-lg-3 col-md-6 mb-5">
+                    <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Este portal fue creado con fines academicos</h4>
                     <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Siguenos</h4>
                     <p>Informate mas acerca de nosotros a traves nuestras redes sociales</p>
                     <div class="d-flex justify-content-start">
@@ -116,7 +117,7 @@
                 </div>
             </div>
             <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-                <p class="mb-2 text-white">Copyright &copy; Design By Juan Narvaez.</a></p>
+                <p class="mb-2 text-white">Copyright &copy; Realizado Por Juan Narvaez.</a></p>
             </div>
         </div>
         <!-- Footer End -->
